feat: movies y movies request
